RESOLVED FIXED24632
Incorrect repaint when layers become or stop being composited
https://bugs.webkit.org/show_bug.cgi?id=24632
Summary Incorrect repaint when layers become or stop being composited
Simon Fraser (smfr)
Reported 2009-03-16 16:41:42 PDT
When RenderLayers jump in and out of composited mode, we don't always correctly repaint the old rendering destination, which can cause redraw turds with animations, for example.
Attachments
Patch, changelog (16.24 KB, patch)
2009-03-16 16:51 PDT, Simon Fraser (smfr)
hyatt: review+
Simon Fraser (smfr)
Comment 1 2009-03-16 16:51:55 PDT
Created attachment 28666 [details] Patch, changelog Can't do a testcase until we have repaint tests working with composited content.
Dave Hyatt
Comment 2 2009-03-17 10:38:37 PDT
Comment on attachment 28666 [details] Patch, changelog r=me
Simon Fraser (smfr)
Comment 3 2009-03-17 13:02:14 PDT
Note You need to log in before you can comment on or make changes to this bug.