WebCore/rendering/RenderLayer.cpp
@@ -165,6 +165,7 @@ RenderLayer::RenderLayer(RenderBoxModelObject* renderer)
     , m_has3DTransformedDescendant(false)
 #if USE(ACCELERATED_COMPOSITING)
     , m_hasCompositingDescendant(false)
+    , m_mustOverlayCompositedLayers(false)
 #endif
     , m_marquee(0)
     , m_staticX(0)
