WebCore/rendering/RenderLayer.h
@@ -487,6 +487,9 @@ private:
 #if USE(ACCELERATED_COMPOSITING)    
     bool hasCompositingDescendant() const { return m_hasCompositingDescendant; }
     void setHasCompositingDescendant(bool b)  { m_hasCompositingDescendant = b; }
+    
+    bool mustOverlayCompositedLayers() const { return m_mustOverlayCompositedLayers; }
+    void setMustOverlayCompositedLayers(bool b) { m_mustOverlayCompositedLayers = b; }
 #endif
 
 private:
@@ -579,6 +582,7 @@ protected:
                                             // in a preserves3D hierarchy. Hint to do 3D-aware hit testing.
 #if USE(ACCELERATED_COMPOSITING)
     bool m_hasCompositingDescendant : 1;
+    bool m_mustOverlayCompositedLayers : 1;
 #endif
 
     RenderMarquee* m_marquee; // Used by layers with overflow:marquee
