WebCore/rendering/RenderLayerCompositor.cpp
@@ -164,26 +164,35 @@ bool RenderLayerCompositor::updateLayerCompositingState(RenderLayer* layer, Styl
 {
     bool needsLayer = needsToBeComposited(layer);
     bool layerChanged = false;
+
+    RenderBoxModelObject* repaintContainer = 0;
+    IntRect repaintRect;
+
     if (needsLayer) {
         enableCompositingMode();
         if (!layer->backing()) {
+            // Get the repaint container before we make backing for this layer
+            repaintContainer = layer->renderer()->containerForRepaint();
+            repaintRect = calculateCompositedBounds(layer, repaintContainer ? repaintContainer->layer() : layer->root());
+
             layer->ensureBacking();
             layerChanged = true;
         }
     } else {
         if (layer->backing()) {
             layer->clearBacking();
+            // Get the repaint container now that we've cleared the backing
+            repaintContainer = layer->renderer()->containerForRepaint();
+            repaintRect = calculateCompositedBounds(layer, repaintContainer ? repaintContainer->layer() : layer->root());
             layerChanged = true;
         }
     }
     
     if (layerChanged) {
-        // Invalidate the parent in this region.
-        RenderLayer* compLayer = layer->ancestorCompositingLayer();
-        if (compLayer) {
-            // We can't reliably compute a dirty rect, because style may have changed already, 
-            // so just dirty the whole parent layer
-            compLayer->setBackingNeedsRepaint();
+        // Invalidate the destination into which this layer used to render.
+        layer->renderer()->repaintUsingContainer(repaintContainer, repaintRect);
+
+        if (!repaintContainer || repaintContainer == m_renderView) {
             // The contents of this layer may be moving between the window
             // and a GraphicsLayer, so we need to make sure the window system
             // synchronizes those changes on the screen.
@@ -319,8 +328,7 @@ void RenderLayerCompositor::computeCompositingRequirements(RenderLayer* layer, s
     
     // Clear the flag
     layer->setHasCompositingDescendant(false);
-
-    setForcedCompositingLayer(layer, ioCompState.m_subtreeIsCompositing);
+    layer->setMustOverlayCompositedLayers(ioCompState.m_subtreeIsCompositing);
     
     const bool isCompositingLayer = needsToBeComposited(layer);
     ioCompState.m_subtreeIsCompositing = isCompositingLayer;
@@ -349,7 +357,7 @@ void RenderLayerCompositor::computeCompositingRequirements(RenderLayer* layer, s
                 // (since we need to ensure that the -ve z-order child renders underneath our contents)
                 if (childState.m_subtreeIsCompositing) {
                     // make |this| compositing
-                    setForcedCompositingLayer(layer, true);
+                    layer->setMustOverlayCompositedLayers(true);
                     childState.m_compositingAncestor = layer;
                 }
             }
@@ -380,7 +388,7 @@ void RenderLayerCompositor::computeCompositingRequirements(RenderLayer* layer, s
     // the child layers are opaque, then rendered with opacity on this layer.
     if (childState.m_subtreeIsCompositing &&
         (layer->renderer()->hasTransform() || layer->renderer()->style()->opacity() < 1))
-        setForcedCompositingLayer(layer, true);
+        layer->setMustOverlayCompositedLayers(true);
 
     // Subsequent layers in the parent stacking context also need to composite.
     if (childState.m_subtreeIsCompositing)
@@ -390,17 +398,6 @@ void RenderLayerCompositor::computeCompositingRequirements(RenderLayer* layer, s
     // this can affect the answer to needsToBeComposited() when clipping,
     // but that's ok here.
     layer->setHasCompositingDescendant(childState.m_subtreeIsCompositing);
-}
-
-void RenderLayerCompositor::setForcedCompositingLayer(RenderLayer* layer, bool force)
-{
-    if (force) {
-        layer->ensureBacking();
-        layer->backing()->forceCompositingLayer();
-    } else {
-        if (layer->backing())
-            layer->backing()->forceCompositingLayer(false);
-    }
 }
 
 void RenderLayerCompositor::setCompositingParent(RenderLayer* childLayer, RenderLayer* parentLayer)
@@ -618,15 +615,7 @@ bool RenderLayerCompositor::has3DContent() const
 
 bool RenderLayerCompositor::needsToBeComposited(const RenderLayer* layer) const
 {
-    return requiresCompositingLayer(layer) || (layer->backing() && layer->backing()->forcedCompositingLayer());
-}
-
-static bool requiresCompositingLayerForTransform(RenderObject* renderer)
-{
-    RenderStyle* style = renderer->style();
-    // Note that we ask the renderer if it has a transform, because the style may have transforms,
-    // but the renderer may be an inline that doesn't suppport them.
-    return renderer->hasTransform() && (style->transform().has3DOperation() || style->transformStyle3D() == TransformStyle3DPreserve3D || style->hasPerspective());
+    return requiresCompositingLayer(layer) || layer->mustOverlayCompositedLayers();
 }
 
 #define VERBOSE_COMPOSITINGLAYER    0
@@ -645,7 +634,7 @@ bool RenderLayerCompositor::requiresCompositingLayer(const RenderLayer* layer) c
         gotReason = true;
     }
     
-    if (!gotReason && requiresCompositingLayerForTransform(layer->renderer())) {
+    if (!gotReason && requiresCompositingForTransform(layer->renderer())) {
         fprintf(stderr, "RenderLayer %p requires compositing layer because: it has 3d transform, perspective, backface, or animating transform\n", layer);
         gotReason = true;
     }
@@ -660,7 +649,7 @@ bool RenderLayerCompositor::requiresCompositingLayer(const RenderLayer* layer) c
         gotReason = true;
     }
 
-    if (!gotReason && requiresCompositingForAnimation(layer)) {
+    if (!gotReason && requiresCompositingForAnimation(layer->renderer())) {
         fprintf(stderr, "RenderLayer %p requires compositing layer because: it has a running transition for opacity or transform\n", layer);
         gotReason = true;
     }
@@ -671,10 +660,10 @@ bool RenderLayerCompositor::requiresCompositingLayer(const RenderLayer* layer) c
 
     // The root layer always has a compositing layer, but it may not have backing.
     return (inCompositingMode() && layer->isRootLayer()) ||
-             requiresCompositingLayerForTransform(layer->renderer()) ||
+             requiresCompositingForTransform(layer->renderer()) ||
              layer->renderer()->style()->backfaceVisibility() == BackfaceVisibilityHidden ||
              clipsCompositingDescendants(layer) ||
-             requiresCompositingForAnimation(layer);
+             requiresCompositingForAnimation(layer->renderer());
 }
 
 // Return true if the given layer has some ancestor in the RenderLayer hierarchy that clips,
@@ -715,12 +704,20 @@ bool RenderLayerCompositor::clipsCompositingDescendants(const RenderLayer* layer
            layer->renderer()->hasOverflowClip();
 }
 
-bool RenderLayerCompositor::requiresCompositingForAnimation(const RenderLayer* layer) const
+bool RenderLayerCompositor::requiresCompositingForTransform(RenderObject* renderer)
 {
-    AnimationController* animController = layer->renderer()->animation();
+    RenderStyle* style = renderer->style();
+    // Note that we ask the renderer if it has a transform, because the style may have transforms,
+    // but the renderer may be an inline that doesn't suppport them.
+    return renderer->hasTransform() && (style->transform().has3DOperation() || style->transformStyle3D() == TransformStyle3DPreserve3D || style->hasPerspective());
+}
+
+bool RenderLayerCompositor::requiresCompositingForAnimation(RenderObject* renderer)
+{
+    AnimationController* animController = renderer->animation();
     if (animController)
-        return animController->isAnimatingPropertyOnRenderer(layer->renderer(), CSSPropertyOpacity) ||
-               animController->isAnimatingPropertyOnRenderer(layer->renderer(), CSSPropertyWebkitTransform);
+        return animController->isAnimatingPropertyOnRenderer(renderer, CSSPropertyOpacity) ||
+               animController->isAnimatingPropertyOnRenderer(renderer, CSSPropertyWebkitTransform);
     return false;
 }
 
